# DIY

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  TODO.txt
configs/vscode/: keybindings.json  setting.json  theme.jsonc
configs/warp/: base16_solarized_dark_monokai_bg.yaml
cpp/: .clang-format  .clang-tidy  CMakeLists.txt  conanfile.txt
cpp/src/: CMakeLists.txt
cpp/src/common/: CMakeLists.txt  except_object.hpp  object.cpp  object.hpp  utils.hpp
cpp/src/lessons/: constexpr.cpp  move_semantics.cpp  namespaces.cpp  noexcept_vector_type.cpp  parameter_passing.cpp  smart_pointers.cpp  static_constexpr.cpp  struct_padding.cpp  why_not_auto.cpp
cpp/src/ocl/examples/: CMakeLists.txt  copy_data.cpp  math_square_2d_dynamic_buffer.cpp  math_square_2d_static_buffer.cpp  print_info.cpp
cpp/src/ocl/kernels/: copy_naive_subgroup.cl  matrix_transpose_tiled_per_row_vectored.cl
cpp/src/ocl/kernels/include/: common.cl
cpp/src/practices/algorithm/: shortest_matching_substring.hpp  sort.hpp  sort.test.cpp
cpp/src/practices/matrix/: CMakeLists.txt
cpp/src/practices/matrix/iterate/: diagonal.hpp  diagonal.test.cpp
cpp/src/practices/matrix/transform/: CMakeLists.txt  rotate.hpp
cpp/src/practices/trade_matching_engine/: CMakeLists.txt  trade_matching_engine.hpp
cpp/src/rust_comparison/: CMakeLists.txt  favorite_memory_leak.cpp  global_format_state.cpp  test.cpp  uniform_initialization.cpp
rust/: Cargo.toml  TODO.txt  pre-commit.sh  rustfmt.toml
rust/.cargo/: config.toml
rust/cpp_comparison/: Cargo.toml
rust/crates/: Cargo.toml
rust/dtolnay_quiz/: Cargo.toml
rust/effective_rust/: Cargo.toml
rust/experiments/: Cargo.toml
rust/hello_macro/src/: lib.rs
rust/hello_macro_derive/src/: lib.rs
rust/lessons/: Cargo.toml
rust/lessons/src/: lib.rs
rust/my/algo/: Cargo.toml
rust/my/async/: Cargo.toml
rust/my/async/benches/: fs_write.rs
rust/my/cpp_comparison/: Cargo.toml
rust/my/crates_usage/: Cargo.toml  build.rs
rust/my/crates_usage/benches/: fibonacci.rs
rust/my/experiments/: Cargo.toml
rust/my/experiments/src/: lib.rs  non_exhaustive.rs  non_pub_module.rs  pub_module.rs
rust/my/practices/: Cargo.toml
rust/my/practices/src/: lib.rs
rust/my/rustcamp/: Cargo.toml
rust/others/blogs/hegdenu/: Cargo.toml
rust/others/blogs/ibraheem/: Cargo.toml
rust/others/books/effective_rust/: Cargo.toml
rust/others/books/nomicon/: Cargo.toml
rust/others/books/trpl/: Cargo.toml
rust/others/books/trpl_proc_macro/: Cargo.toml
rust/others/books/trpl_proc_macro/src/: lib.rs
rust/others/quizzes/dtolnay/: Cargo.toml
rust/others/tutorials/tokio/: Cargo.toml
rust/practices/: Cargo.toml
rust/src/: main.rs
rust/src/cpp_comparison/: duck_typing.rs  move_semantics.rs  noalias_optimization.rs  references.rs  variable_shadowing.rs
rust/src/experiments/: anonymous_type_parameters.rs  before_main.rs  generics_with_ref.rs  nominal_vs_structural_typing.rs  raii.rs  rc_in_mutex.rs  sealed_trait.rs
rust/src/lessons/: closures.rs  constants.rs  control_flow.rs  data_types.rs  enums.rs  functions.rs  generics.rs  methods.rs  pattern_matching.rs  slice_type.rs  smart_pointers.rs  structs.rs  tests.rs  traits.rs  type_infer.rs  types.rs
rust/src/lessons/async/: async2.rs  async3.rs  async4.rs  async5.rs
rust/src/lessons/collections/: hash_maps.rs  strings.rs  vectors.rs
rust/src/lessons/macros/: macros.rs
rust/src/lessons/modules/: modules.rs
rust/src/practices/: fibonacci.rs  fizzbuzz.rs  guessing_game.rs  mean_median_mode.rs  pig_latin.rs  rectangle_area.rs  temperature_conversions.rs
src/: CMakeLists.txt
src/common/: CMakeLists.txt  except_object.hpp  object.cpp  object.hpp  utils.hpp
src/lessons/: CMakeLists.txt  copy_elision.cpp  global_initialization.cpp  lambdas.cpp  move_semantics.cpp  noexcept_vector_type.cpp  parameter_passing.cpp  sfinae.cpp  smart_pointers.cpp  special_members_generation.cpp  standard_streams.cpp  struct_pagging.cpp  unfair_const.cpp  virtual_destructor.cpp  why_auto.cpp  why_emplace.cpp  why_not_auto.cpp
src/ocl/core/: CMakeLists.txt  data_types.cpp  data_types.hpp  engine.cpp  engine.hpp  error.hpp  utils.hpp
src/ocl/examples/: CMakeLists.txt  copy_data.cpp  math_square_1d_static_buffer.cpp  matrix_transpose.cpp  print_info.cpp
src/ocl/kernels/: copy_naive.cl  copy_vectored.cl  math_square.cl  matrix_rotate.cl  matrix_transpose.cl  matrix_transpose_naive.cl  matrix_transpose_tiled.cl  matrix_transpose_tiled_per_column.cl  matrix_transpose_tiled_per_column_vectored.cl  matrix_transpose_tiled_per_elem.cl  matrix_transpose_tiled_per_row.cl  matrix_transpose_tiled_per_row_vectored.cl  matrix_transpose_tiled_vectored.cl  print_info.cl
src/ocl/kernels/include/: common.cl
src/practice/: CMakeLists.txt  constexpr.cpp  move_semantics.cpp  noexcept_vector_type.cpp  struct_pagging.cpp  why_emplace.cpp
src/practices/: CMakeLists.txt  count_unique_words.cpp
src/practices/algorithm/: CMakeLists.txt  deduplicate.hpp  deduplicate.test.cpp  shortest_matching_substring.test.cpp  unique.hpp  unique.test.cpp
src/practices/matrix/: CMakeLists.txt  circular_iteration.cpp  diagonal_iteration.cpp  rotate.cpp
src/practices/matrix/iterate/: CMakeLists.txt  diagonal.hpp  spiral.hpp  spiral.test.cpp
src/practices/matrix/transform/: CMakeLists.txt  rotate.hpp  rotate.test.cpp  transpose.hpp  transpose.test.cpp
src/practices/trade_matching_engine/: main.cpp  trade_matching_engine.hpp  trade_matching_engine.test.cpp
src/rust_comparison/: CMakeLists.txt  add_on_vector_iteration.cpp  const_initialization.cpp  data_race.cpp  division_by_zero.cpp  duck_typing.cpp  move_semantics.cpp  noalias_optimization.cpp  references.cpp  structs.cpp  tagged_unions.cpp  undefined_behavior.cpp  use_after_free.cpp  variable_shadowing.cpp
terraform/: another.tfvars  locals.tf  main.tf  migrations.tf  resources.tf  variables.tf
tools/: generate_unique_words.py
