# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "DIY"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "const_initialization"
path = "src/cpp_comparison/const_initialization.rs"

[[bin]]
name = "use_after_free"
path = "src/cpp_comparison/use_after_free.rs"

[[bin]]
name = "data_race"
path = "src/cpp_comparison/data_race.rs"

[[bin]]
name = "move_semantics"
path = "src/cpp_comparison/move_semantics.rs"

[[bin]]
name = "references"
path = "src/cpp_comparison/references.rs"

[[bin]]
name = "variable_shadowing"
path = "src/cpp_comparison/variable_shadowing.rs"

[[bin]]
name = "noalias_optimization"
path = "src/cpp_comparison/noalias_optimization.rs"

[[bin]]
name = "division_by_zero"
path = "src/cpp_comparison/division_by_zero.rs"

[[bin]]
name = "duck_typing"
path = "src/cpp_comparison/duck_typing.rs"

[[bin]]
name = "constants"
path = "src/lessons/constants.rs"

[[bin]]
name = "type_infer"
path = "src/lessons/type_infer.rs"

[[bin]]
name = "data_types"
path = "src/lessons/data_types.rs"

[[bin]]
name = "functions"
path = "src/lessons/functions.rs"

[[bin]]
name = "control_flow"
path = "src/lessons/control_flow.rs"

[[bin]]
name = "slice_type"
path = "src/lessons/slice_type.rs"

[[bin]]
name = "structs"
path = "src/lessons/structs.rs"

[[bin]]
name = "methods"
path = "src/lessons/methods.rs"

[[bin]]
name = "enums"
path = "src/lessons/enums.rs"

[[bin]]
name = "pattern_matching"
path = "src/lessons/pattern_matching.rs"

[[bin]]
name = "modules"
path = "src/lessons/modules/modules.rs"

[[bin]]
name = "vectors"
path = "src/lessons/collections/vectors.rs"

[[bin]]
name = "strings"
path = "src/lessons/collections/strings.rs"

[[bin]]
name = "hash_maps"
path = "src/lessons/collections/hash_maps.rs"

[[bin]]
name = "error_handling"
path = "src/lessons/error_handling.rs"

[[bin]]
name = "generics"
path = "src/lessons/generics.rs"

[[bin]]
name = "traits"
path = "src/lessons/traits.rs"

[[bin]]
name = "lifetimes"
path = "src/lessons/lifetimes.rs"

[[bin]]
name = "tests"
path = "src/lessons/tests.rs"

[[bin]]
name = "closures"
path = "src/lessons/closures.rs"

[[bin]]
name = "default_trait"
path = "src/lessons/default_trait.rs"

[[bin]]
name = "iterators"
path = "src/lessons/iterators.rs"

[[bin]]
name = "smart_pointers"
path = "src/lessons/smart_pointers.rs"

[[bin]]
name = "oop"
path = "src/lessons/oop.rs"

[[bin]]
name = "concurrency"
path = "src/lessons/concurrency.rs"

[[bin]]
name = "unsafe"
path = "src/lessons/unsafe.rs"

[[bin]]
name = "types"
path = "src/lessons/types.rs"

[[bin]]
name = "guessing_game"
path = "src/practices/guessing_game.rs"

[[bin]]
name = "fibonacci"
path = "src/practices/fibonacci.rs"

[[bin]]
name = "temperature_conversions"
path = "src/practices/temperature_conversions.rs"

[[bin]]
name = "the_twelve_days_of_christmas"
path = "src/practices/the_twelve_days_of_christmas.rs"

[[bin]]
name = "fizzbuzz"
path = "src/practices/fizzbuzz.rs"

[[bin]]
name = "mean_median_mode"
path = "src/practices/mean_median_mode.rs"

[[bin]]
name = "pig_latin"
path = "src/practices/pig_latin.rs"

[[bin]]
name = "employees_manager"
path = "src/practices/employees_manager.rs"

[[bin]]
name = "before_main"
path = "src/experiments/before_main.rs"

[[bin]]
name = "test"
path = "src/experiments/test.rs"

[[bin]]
name = "nominal_vs_structural_typing"
path = "src/experiments/nominal_vs_structural_typing.rs"

[[bin]]
name = "raii"
path = "src/experiments/raii.rs"

[[bin]]
name = "copy_ref_struct"
path = "src/experiments/copy_ref_struct.rs"

[[bin]]
name = "no_default_copy"
path = "src/experiments/no_default_copy.rs"

[[bin]]
name = "sizes"
path = "src/experiments/sizes.rs"

[[bin]]
name = "generics_with_derived_clone"
path = "src/experiments/generics_with_derived_clone.rs"

[[bin]]
name = "rc_in_mutex"
path = "src/experiments/rc_in_mutex.rs"

[[bin]]
name = "anonymous_type_parameters"
path = "src/experiments/anonymous_type_parameters.rs"

[[bin]]
name = "sealed_trait"
path = "src/experiments/sealed_trait.rs"

[dependencies]
rand = "0.8.5"
