[workspace]
members = [
    "my/*",
    "others/books/*",
    "others/quizzes/*",
    "others/blogs/*",
    "others/tutorials/*",
]
resolver = "2"

[profile.dev]
debug = 0
# Stripping of debug info will be added automatically
# (since https://github.com/rust-lang/cargo/pull/13257),
# but still add here explicitly to be more readable.
strip = "debuginfo"

[workspace.dependencies]
my_practices = { path = "my/practices" }
