add_executable(move_semantics move_semantics.cpp)
add_executable(why_emplace why_emplace.cpp)
add_executable(noexcept_vector_type noexcept_vector_type.cpp)
add_executable(struct_pagging struct_padding.cpp)
add_executable(constexpr constexpr.cpp)
add_executable(special_members_generation special_members_generation.cpp)
add_executable(global_initialization global_initialization.cpp)
add_executable(why_auto why_auto.cpp)
add_executable(why_not_auto why_not_auto.cpp)
add_executable(smart_pointers smart_pointers.cpp)

target_link_libraries(move_semantics PRIVATE common)
target_link_libraries(why_emplace PRIVATE common)
target_link_libraries(noexcept_vector_type PRIVATE common)
target_link_libraries(struct_pagging PRIVATE common)
target_link_libraries(constexpr PRIVATE common)
target_link_libraries(special_members_generation PRIVATE common)
target_link_libraries(why_auto PRIVATE common)
target_link_libraries(smart_pointers PRIVATE common)