add_executable(move_semantics move_semantics.cpp)
add_executable(why_emplace why_emplace.cpp)
add_executable(noexcept_vector_type noexcept_vector_type.cpp)
add_executable(struct_pagging struct_pagging.cpp)
add_executable(constexpr constexpr.cpp)

target_link_libraries(move_semantics PRIVATE common)
target_link_libraries(why_emplace PRIVATE common)
target_link_libraries(noexcept_vector_type PRIVATE common)
target_link_libraries(struct_pagging PRIVATE common)
target_link_libraries(constexpr PRIVATE common)