add_compile_options(-Wall -Wextra -pedantic -Werror)
add_compile_options(-fsanitize=address)
add_link_options(-fsanitize=address)

add_executable(rust_comp_use_after_free use_after_free.cpp)
add_executable(rust_comp_global_format_state global_format_state.cpp)
add_executable(rust_comp_uniform_initialization uniform_initialization.cpp)
add_executable(rust_comp_const_initialization const_initialization.cpp)
add_executable(rust_comp_data_race data_race.cpp)
add_executable(rust_comp_move_semantics move_semantics.cpp)
add_executable(rust_comp_references references.cpp)
add_executable(rust_comp_add_on_vector_iteration add_on_vector_iteration.cpp)
add_executable(rust_comp_variable_shadowing variable_shadowing.cpp)
