[package]
name = "my_async"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "fs_write"
harness = false

[dependencies]
chrono = "0.4"
futures = "0.3"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console-subscriber = "0"
tokio-metrics = "0"
rayon = "1.10.0"
bytes = "1.8.0"
tokio-uring = { version = "0.5.0", features = ["bytes"] }
glommio = "0.9.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
rand = "0.8.5"
