[package]
name = "my_crates_usage"
version = "0.1.0"
edition = "2021"

[dependencies]
structural-convert = "0.13"
thiserror = "1.0.59"
relative-path = "1.9.2"
temp-dir = "0.1.13"
temp-file = "0.1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_builder = "0.20"
typed-builder = "0.18"
