[package]
name = "my_crates_usage"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tonic-helloworld-server"
path = "src/bin/tonic/server.rs"

[[bin]]
name = "tonic-helloworld-client"
path = "src/bin/tonic/client.rs"

[[bench]]
name = "fibonacci"
harness = false

[dependencies]
structural-convert = "0.13"
thiserror = "1.0"
relative-path = "1.9"
temp-dir = "0.1"
temp-file = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_builder = "0.20"
typed-builder = "0.18"
anyhow = "1.0"
color-eyre = "0.6"
color-backtrace = "0.6"
backtrace = "0.3"
snafu = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = { version = "0.2", features = ["traced-error"] }
rust-ini = "0.21"
configparser = "3.1"
serde_ini = "0.2"
derive_more = { version = "1.0", features = ["error", "display", "from"] }
my_practices = { workspace = true }
prost = "0.13.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.3"
handlebars = "6.2.0"
maplit = "1"
expect-test = "1.5"
bon = "3.3.2"

[dev-dependencies]
criterion = "0.5.1"

[build-dependencies]
prost-build = "0.13.3"
tonic-build = "0.12.3"
