[package]
name = "my_practices"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest-middleware = { version = "0.5.1", features = ["json"] }
serde = "1.0.228"
serde_html_form = "0.4.0"
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
thiserror = "1.0"
tracing = "0.1.44"
url = "2.5.8"
tokio = { version = "1.49.0", features = ["macros"] }
